# context-converter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/public/: runtime-speed-test-results.txt
.github/workflows/: pypi-publish.yml
src/context_converter/: converter.py  formatter.py  main.py  utils.py
src/conv_html_to_markdown/: converter.py  download_jina.py  formatter.py  main.py  utils.py
tests/: test_converter.py  test_formatter.py  test_utils.py
